--- a/style/main.css
+++ b/style/main.css
@@ -353,53 +353,53 @@ hr {
     text-align: center;
     font-weight: bold;
     z-index: 10;
-    font-size: 22px; }
+    font-size: 25px; }
   .tile.tile-2 .tile-inner {
+    font-size: 22px;
     background: #eee4da;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0.14286); }
   .tile.tile-4 .tile-inner {
+    font-size: 22px;
     background: #ede0c8;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0.14286); }
   .tile.tile-8 .tile-inner {
+    font-size: 22px;
     color: #f9f6f2;
     background: #f2b179; }
   .tile.tile-16 .tile-inner {
+    font-size: 22px;
     color: #f9f6f2;
     background: #f59563; }
   .tile.tile-32 .tile-inner {
+    font-size: 22px;
     color: #f9f6f2;
     background: #f67c5f; }
   .tile.tile-64 .tile-inner {
+    font-size: 22px;
     color: #f9f6f2;  
     background: #f65e3b; }
   .tile.tile-128 .tile-inner {
     color: #f9f6f2;
-    font-size:32px;
     background: #edcf72;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286); }
   .tile.tile-256 .tile-inner {
     color: #f9f6f2;
     background: #edcc61;
-    font-size:32px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048); }
   .tile.tile-512 .tile-inner {
     color: #f9f6f2;
-    font-size:32px;
     background: #edc850;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381); }
   .tile.tile-1024 .tile-inner {
     color: #f9f6f2;
-    font-size:32px;
     background: #72a0c1;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571); }
   .tile.tile-2048 .tile-inner {
     color: #f9f6f2;
     background: #8db600;
-    font-size:32px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571); }
   .tile.tile-4096 .tile-inner {
     background: #5edc1f;
-    font-size:32px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571); }
   .tile.tile-8192 .tile-inner {
     background: #019529;
@@ -417,34 +417,29 @@ hr {
   .tile.tile-131072 .tile-inner {
     color: #f9f6f2;
     background: #3c3a32;
-    font-size:32px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
   .tile.tile-262144 .tile-inner {
     color: #f9f6f2;
     background: #3c3a32;
-    font-size:32px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
   .tile.tile-524288 .tile-inner {
     color: #f9f6f2;
     background: #3c3a32;
-    font-size:32px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
   .tile.tile-1048576 .tile-inner {
     color: #f9f6f2;
     background: #3c3a32;
-    font-size:32px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
   .tile.tile-2097152 .tile-inner {
     color: #f9f6f2;
     background: #3c3a32;
-    font-size:32px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
   .tile.tile-4194304 .tile-inner {
     color: #f9f6f2;
     background: #3c3a32;
-    font-size:32px;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
   .tile.tile-8388608 .tile-inner {
+    font-size: 22px;
     color: #f9f6f2;
     background: #3c3a32;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
@@ -457,15 +452,74 @@ hr {
         font-size: 8px; } }
 
     @media screen and (max-width: 520px) {
-      .tile.tile-64 .tile-inner {
-        font-size: 20px; } }
-    @media screen and (max-width: 520px) {
-      .tile.tile-256 .tile-inner {
+      .tile.tile-2 .tile-inner {
         font-size: 15px; } }
     @media screen and (max-width: 520px) {
+      .tile.tile-4 .tile-inner {
+        font-size: 15px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-8 .tile-inner {
+        font-size: 15px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-16 .tile-inner {
+        font-size: 15px; } }    
+    @media screen and (max-width: 520px) {
+      .tile.tile-32 .tile-inner {
+        font-size: 15px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-64 .tile-inner {
+        font-size: 15px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-128 .tile-inner {
+        font-size: 18px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-256 .tile-inner {
+        font-size: 18px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-512 .tile-inner {
+        font-size: 18px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-1024 .tile-inner {
+        font-size: 18px; } }
+    @media screen and (max-width: 520px) {
       .tile.tile-2048 .tile-inner {
-        font-size: 20px;
-        line-height:24px; } }
+        font-size: 18px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-4096 .tile-inner {
+        font-size: 18px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-8192 .tile-inner {
+        font-size: 18px;} }
+    @media screen and (max-width: 520px) {
+      .tile.tile-16384 .tile-inner {
+        font-size: 18px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-32768 .tile-inner {
+        font-size: 18px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-65536 .tile-inner {
+        font-size: 18px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-131072 .tile-inner {
+        font-size: 18px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-262144 .tile-inner {
+        font-size: 18px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-524288 .tile-inner {
+        font-size: 18px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-1048576 .tile-inner {
+        font-size: 18px;} }
+    @media screen and (max-width: 520px) {
+      .tile.tile-2097152 .tile-inner {
+        font-size: 18px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-4194304 .tile-inner {
+        font-size: 18px; } }
+    @media screen and (max-width: 520px) {
+      .tile.tile-8388608 .tile-inner {
+        font-size: 15px;} }
 
 @-webkit-keyframes appear {
   0% {
